hw final deploy

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </head>
 
 	<body>
-
-    <div class="container">        
+        <div class="page-container">     
 
     	<header>header</header>
     	
